Fix std::string::assign invocation: pass string instead of char*.

According to the C++ standard, the three arguments overload
of std::string::assign accepts an std::basic_string:
http://en.cppreference.com/w/cpp/string/basic_string/assign

Fixing the usage, where char* instead of std::string was passed.

This popped up after libc++ became more standard compliant,
and now it throws a compiler error.

BUG=630681

Review-Url: https://codereview.chromium.org/2177653004
Cr-Commit-Position: refs/heads/master@{#407302}

Former-commit-id: 5c1cf32985988682e68bb3d695009086a314eb39